--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
-ul{   
-    background-color: rgb(172, 206, 207);
+head,ul{   
+    
     max-width: 20em;
+    background-color: rgb(172, 206, 207);
     border-width: 1px;
     padding-top: 10px;
     padding-bottom: 10px;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px;
+    border-width: 1px;
     
 }
 
@@ -13,17 +15,30 @@ body{
     background-color: rgb(218, 199, 180);
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 main{
     background-color: rgb(244, 245, 245);
+    
     margin-left: 10px;
     margin-right: 10px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 10px;
+    border-width: 1px;
 
     font-family: Arial;
     border-radius: 10px;
+    padding-bottom: 10px;
+}
+
+p {
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  
 
 }
+
