--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ head,ul{
     padding-bottom: 10px;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px;
-    border-width: 1px;
+
+    border: 1px solid  rgb(172, 206, 207);
     
 }
 
@@ -21,9 +22,6 @@ body{
 
 main{
     background-color: rgb(244, 245, 245);
-    
-    margin-left: 10px;
-    margin-right: 10px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 10px;
